2008-04-22  Martin Lambers <marlam@marlam.de>

	* src/view_area.cpp, src/Makefile.am: Fix computation of the used
	viewport area for "Save current view" operations.
	* configure.ac, Makefile.am: Remove unused vector/matrix lib.

2008-04-21  Martin Lambers <marlam@marlam.de>

	* src/zoom_selector.h, src/zoom_selector.cpp,
	src/translation_selector.h, src/translation_selector.cpp,
	src/rotation_selector.h, src/rotation_selector.cpp,
	src/interpolation_selector.cpp, src/channel_selector.cpp,
	src/view_area.h, src/view_area.cpp, src/cvlview.h, src/cvlview.cpp,
	src/Makefile.am: Beginnings of GUI improvements. Unfinished.
	* src/color_selector.h, src/color_selector.cpp, src/scale_selector.h,
	src/scale_selector.cpp, src/translation_selector.cpp,
	src/rotation_selector.h, src/rotation_selector.cpp,
	src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/heightmap_strip_vs.glsl, src/heightmap_quads_vs.glsl,
	src/view_area.h, src/view_area.cpp, src/cvlview.h, src/cvlview.cpp,
	src/Makefile.am: Finish GUI improvements.
	* src/channel_info.cpp, src/color_selector.h, src/color_selector.cpp,
	src/channel_selector.cpp, src/range_selector.cpp,
	src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/view_area.cpp: More GUI tweaks.
	* src/view_area.h, src/view_area.cpp: More tweaks.
	* configure.ac, Makefile.am, glv/glv.h, glv/Makefile.am: Add beginnings
	of vector and matrix classes.
	* src/Makefile.am, src/view_area.cpp: Use new vector and matrix
	classes.
	* glv/glvm.h, glv/Makefile.am, src/view_area.cpp:
	More functionality for the vector and matrix classes.
	* configure.ac, Makefile.am, glvm/glvm.h, glvm/Makefile.am,
	src/Makefile.am: Rename directory.

2008-04-19  Martin Lambers <marlam@marlam.de>

	* src/view_area.h, src/view_area.cpp: Use buffer objects for texture
	coordinates and vertices to speed up 3D view rendering.
	* src/heightmap_selector.h, src/heightmap_selector.cpp,
	src/view_area.cpp: 3D view tweaks.

2008-04-18  Martin Lambers <marlam@marlam.de>
