@@ -3,6 +3,8 @@
 	* src/view_area.cpp, src/Makefile.am: Fix computation of the used
 	viewport area for "Save current view" operations.
 	* configure.ac, Makefile.am: Remove unused vector/matrix lib.
+	* src/scale_selector.cpp, src/translation_selector.cpp,
+	src/rotation_selector.cpp: Use less space.
 
 2008-04-21  Martin Lambers <marlam@marlam.de>
 
